--- a/kin_report.tex
+++ b/kin_report.tex
@@ -45,9 +45,9 @@
 　あなたはいつも通りロボットカーで会社に通勤している途中である。目の前の信号が赤に変わることを予見してあなたのロボットカーは速度を落とし始めた。そこへ、隣のレーンから別のロボットカーが近づいてきた。あなたのロボットカーは、隣のレーンから来るロボットカーを避けるようにハンドルを切った。あなたのロボットカーは歩道に乗り上げ、歩行者を轢いてしまった。
 　この事件における被害者は明確であるが、加害者は誰だろうか。ロボットカーを作ったメーカーか、隣のレーンから来たロボットカーの所有者か、はたまた自分自身か。あなたはロボットメーカーやロボットの所有者の責任についてどのように考えますか。\\
  
-自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるのでメーカーの責任は少ないと思います。速度を落とすということは多かれ少なかれ危険を回避できると思います。
+自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるのでこのことに関してメーカーの責任は少ないと思います。速度を落とすということは多かれ少なかれ危険を回避できると思います。
 
-対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。
+対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
 しかし道路上、弱者の立場にある歩行者を認識して避けることが出来なかったということが浮かび上がってきます。
 
 隣のレーンから来たロボットカーがどのような理由で
