--- a/kin_report.tex
+++ b/kin_report.tex
@@ -50,8 +50,7 @@
 対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
 しかし道路上、弱者の立場にある歩行者を認識して避けることが出来なかったということが浮かび上がってきます。
 
-隣のレーンから来たロボットカーがどのような理由で
-
+隣のレーンから来たロボットカーがどのような理由でこちらの車に向かってきたのか原因の解明が必要ですが、
 \newpage
  (3)現在、インターネットや自動化技術の発展によって人が行う仕事は確実に減っている。例えば、20世紀初頭の工場は単純作業者で溢れていたが、その多くは産業用ロボットに置き換わった。Amazonや楽天といったインターネット商店の出現によって、小売店の売上は減少しており、従来は小売店で人が行っていた仕事がインターネット上のプログラムに置き換わりつつある。
 　ロボットやプログラムの所有者は自動化によって多くの富を得た。一方で、単純作業者は職を失い、新しい職につくことが難しくなった。自動化による貧富の格差は今後さらに拡大する見込みである。
