--- a/kin_report.tex
+++ b/kin_report.tex
@@ -47,8 +47,11 @@
  
 自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるのでこのことに関してメーカーの責任は少ないと思います。速度を落とすということは多かれ少なかれ危険を回避できると思います。
 
-対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
-しかし道路上、弱者の立場にある歩行者を認識して避けることが出来なかったということが浮かび上がってきます。
+また対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
+しかし道路上、弱者の立場にある歩行者は必ず避けなければいけません。
+
+今回人を認識して避けることが出来なかったということが浮かび上がってきます。これは
+
 
 隣のレーンから来たロボットカーがどのような理由でこちらの車に向かってきたのか原因の解明が必要ですが、
 \newpage
