--- a/kin_report.tex
+++ b/kin_report.tex
@@ -4,7 +4,7 @@
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage{ascmac}
-%
+
 \setlength{\textwidth}{\fullwidth}
 \setlength{\textheight}{40\baselineskip}
 \addtolength{\textheight}{\topskip}
@@ -12,6 +12,8 @@
 \setlength{\topmargin}{0pt}
 \setlength{\headheight}{0pt}
 \setlength{\headsep}{0pt}
+
+
 %
 \newcommand{\divergence}{\mathrm{div}\,}  %ダイバージェンス
 \newcommand{\grad}{\mathrm{grad}\,}  %グラディエント
@@ -23,21 +25,23 @@
 \date{\today}
 \begin{document}
 \maketitle
-%
-%
 %\section{a}
 
 (1)もしも、あなたに数年間付き合い続けた恋人がいるとする。ある時、あなたは恋人の当部に何か違和感のあるものを見つけた。それはシリアルナンバーのついたプレートであり、恋人はロボットであることがわかった。
-　恋人は、全てが人間と同等に作られており、表面上の違いはそのプレート以外は見当たらないとして、
-あなたはその後の恋人との関係をどう考えますか。\\
+　恋人は、全てが人間と同等に作られており、表面上の違いはそのプレート以外は見当たらないとして、あなたはその後の恋人との関係をどう考えますか。\\
 
 
 私は何事もなく付き合うことを選択します。
-ロボットでなくても狸や狐が化けて、人と付き合うことがあるかもしれません。映画の平成狸合戦ぽんぽこではありませんが、あの作品中では狸が人間に化けていますが、人間は何も気づかずに生活していると思います。それと同じように、もしかしたら私達の生活の中にも狸やロボット、またはそれ以外の生物が人間の形をして紛れ込んでいるかもしれません。しかしもし恋人がそれだとわかったからと言って今後の関係に支障はないと考えます。
-
-ロボット側が人間の情報を得たり欺くために人間になりすますということも考えられますが、それを見抜けなかった人間側にも責任があると思います。
-人間と人間同士が愛しあったり、好きになることは当たり前だと思いますが、相手が人間ではないとわかった時にそれを否定するのは 
-
+ロボットでなくても狸や狐が化けて、人と付き合うことがあるかもしれません。映画の平成狸合戦ぽんぽこのように、あの作品中では狸が人間に化けていますが、人間は何も気づかずに生活していると思います。それと同じように、もしかしたら私達の生活の中にも狸やロボット、またはそれ以外の生物が人間の形をして紛れ込んでいるかもしれません。しかしもし恋人がそれだとわかったからと言って、今後の関係に支障はないと考えます。
+なぜなら人間以外を好きなったりしても構わないと考えるからです。
+%ロボット側が人間の情報を得たり欺くために人間になるということも考えられますが、それを見抜けなかった人間側にも責任があると思います。
+男女の人間が愛しあったり、好きになることは当たり前だと思います。それ以外にも男性同士や女性同士のジェンダーを超えた結婚が認められたり、出生時に割り当てられた性別とは異なる性の自己意識である性同一性障害が理解されるようになってきています。
+それと同じように人間と変わりない以上、付き合っていけると思います。
+しかし相手が人間ではないとわかった時にそれを否定するのは差別になると思います。
+見た目が人間と変わらない以上、人間として接しなければいけなと考えます。
+さらに付き合っていけば結婚することもあると思います。それでも私は結婚出来ると思います。家族になるのは決して子供がいることが条件ではないし、夫婦の形であることには変わりありません。
+もし恋人が自分がロボットであるという秘密を打ち明けたとしても公にせず、二人だけの秘密にした方が良いと思います。
+以上から私は、恋人が何であろうと愛し続けることが出来ると思います。
 
 \newpage
 
@@ -45,23 +49,36 @@
 　あなたはいつも通りロボットカーで会社に通勤している途中である。目の前の信号が赤に変わることを予見してあなたのロボットカーは速度を落とし始めた。そこへ、隣のレーンから別のロボットカーが近づいてきた。あなたのロボットカーは、隣のレーンから来るロボットカーを避けるようにハンドルを切った。あなたのロボットカーは歩道に乗り上げ、歩行者を轢いてしまった。
 　この事件における被害者は明確であるが、加害者は誰だろうか。ロボットカーを作ったメーカーか、隣のレーンから来たロボットカーの所有者か、はたまた自分自身か。あなたはロボットメーカーやロボットの所有者の責任についてどのように考えますか。\\
  
-自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるのでこのことに関してメーカーの責任は少ないと思います。速度を落とすということは多かれ少なかれ危険を回避できると思います。
+自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるので、この機能に関してメーカーの責任は少ないと思います。速度を落とすということは危険回避もでき、もし衝突したい際の衝撃を少しでも軽減できるからです。
+また目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。　%今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
+しかし運転している以上、弱者の立場にある歩行者は必ず避けなければいけません。
+今回のケースは隣のレーンから来るロボットカーを認識しましたが、人を認識して避けることが出来なかったということが浮かび上がってきます。メーカーはまず歩行者を第一に避けるために設計しなけいればいけないです。
+また隣のレーンから来るためにハンドルを切る、というのは誤作動に近いと思います。文章中からはハンドルを切る必要がないと思われますが、このような機能をつけている理由もメーカーの説明が必要だと思います。
 
-また対向車や目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
-しかし道路上、弱者の立場にある歩行者は必ず避けなければいけません。
+これはメーカーが想定しなければならないことだと思います。
 
-今回人を認識して避けることが出来なかったということが浮かび上がってきます。これは
+また隣のレーンから来たロボットカーについて考えると、信号機近くで速度を落としている自分の車に斜め横から追い越す形で入ろうとしているように見受けられます。
+どのような理由で自身のロボットカーと同じように減速せずに信号機の交差点に向かってきたのか原因の解明が必要ですが、これは交差点付近で進路変更をしようとしたようにも見受けられます。このために少なからず隣のレーンから来たロボットカーのメーカーにもロボットカーの原因解明の責任があると思います。
 
-
-隣のレーンから来たロボットカーがどのような理由でこちらの車に向かってきたのか原因の解明が必要ですが、
 \newpage
  (3)現在、インターネットや自動化技術の発展によって人が行う仕事は確実に減っている。例えば、20世紀初頭の工場は単純作業者で溢れていたが、その多くは産業用ロボットに置き換わった。Amazonや楽天といったインターネット商店の出現によって、小売店の売上は減少しており、従来は小売店で人が行っていた仕事がインターネット上のプログラムに置き換わりつつある。
 　ロボットやプログラムの所有者は自動化によって多くの富を得た。一方で、単純作業者は職を失い、新しい職につくことが難しくなった。自動化による貧富の格差は今後さらに拡大する見込みである。
 　更に自動化が進む未来において人や社会はどうあるべきかについて、①政治や社会としての対応の観点から②個人としての生き方の観点から、自分の考えを述べよ。\\
  
-①政治や社会の対応として、失業が考えられる人への手当と新しい雇用先の支援が必要だと思います。まず企業が自動化をも導入する考えを雇用している従業員全員に理解・通達することが必要になります。その上で自動化によって失われる
+①政治や社会の対応として、失業が考えられる人への手当と新しい雇用先の支援が必要だと思います。まず企業が自動化を導入する考えを雇用している従業員全員に理解・通達することが必要になります。その上で自動化によって失われる従業員への手当を政治や社会がするべきだと考えます。
+オックスフォード大学のオズボーン氏によると、10年から20年後になくなる確率のある仕事は、ホテルの受付員、データ入力作業員、電話販売員などが挙げられている。
+入力作業や事務作業がなくなる確率があるのは理解できるが、電話販売員やオペレータの仕事がなくなる確率があるのは驚いた。しかし音声技術や音声理解の分野はあと10年もすると、人と変わりなく会話が出来るかもしれない。
+実際PepperやASIMOといったロボットは会話するだけでなく、人の感情を理解しながら会話することも進められているので、そのノウハウがあればオペレータなどの電話販売の業種もなくなるかもしないと理解できた。
 
 将来人間が行っていたことを全て自動化するというのは考えにくいですが、生産ラインや運搬の仕分けなどの単純作業が自動化する流れは止めることができないと思います。
+
+②個人としての生き方の観点からは、職がロボットによって取られたという悲しみがあると思います。
+
+自動化する部分とそうでない部分の線引きが必要になってきます。
+何でもかんでも自動化してしまうと、バグが出た時に止めることが出来ません。
+ロボット側が止まった時に代わりに人が行わなければいけない時もあると思います。
+
+一番は自分の希望通りにならなかったことが挙げられます。
 
 
 \end{document}
