--- a/kin_report.tex
+++ b/kin_report.tex
@@ -66,13 +66,15 @@
 　更に自動化が進む未来において人や社会はどうあるべきかについて、①政治や社会としての対応の観点から②個人としての生き方の観点から、自分の考えを述べよ。\\
  
 ①政治や社会の対応として、失業が考えられる人への手当と新しい雇用先の支援が必要だと思います。まず企業が自動化を導入する考えを雇用している従業員全員に理解・通達することが必要になります。その上で自動化によって失われる従業員への手当を政治や社会がするべきだと考えます。
-オックスフォード大学のオズボーン氏によると、10年から20年後になくなる確率のある仕事は、ホテルの受付員、データ入力作業員、電話販売員などが挙げられている。
-入力作業や事務作業がなくなる確率があるのは理解できるが、電話販売員やオペレータの仕事がなくなる確率があるのは驚いた。しかし音声技術や音声理解の分野はあと10年もすると、人と変わりなく会話が出来るかもしれない。
-実際PepperやASIMOといったロボットは会話するだけでなく、人の感情を理解しながら会話することも進められているので、そのノウハウがあればオペレータなどの電話販売の業種もなくなるかもしないと理解できた。
+オックスフォード大学のオズボーン氏によると、10年から20年後になくなる確率のある仕事は、ホテルの受付員、データ入力作業員、電話販売員などが挙げられています。
+入力作業や事務作業がなくなる確率があるのは理解できますが、電話販売員やオペレータの仕事がなくなる確率があるのは驚きました。しかし音声技術や音声理解の分野はあと10年もすると、人と変わりなく会話が出来るかもしれません。
+実際PepperやASIMOといったロボットは会話するだけでなく、人の感情を理解しながら会話することも研究されているので、そのノウハウがあればオペレータなどの電話販売の業種もなくなるかもしないと理解できました。
 
 将来人間が行っていたことを全て自動化するというのは考えにくいですが、生産ラインや運搬の仕分けなどの単純作業が自動化する流れは止めることができないと思います。
+また最後の作業工程として人の目で確認しなければならないこともあるので、必ずしも人の仕事は無くならないと思います。
 
-②個人としての生き方の観点からは、職がロボットによって取られたという悲しみがあると思います。
+②個人としての生き方の観点からは、
+職がロボットによって取られたという悲しみがあると思います。
 
 自動化する部分とそうでない部分の線引きが必要になってきます。
 何でもかんでも自動化してしまうと、バグが出た時に止めることが出来ません。
