--- a/kin_report.tex
+++ b/kin_report.tex
@@ -41,6 +41,7 @@
 見た目が人間と変わらない以上、人間として接しなければいけなと考えます。
 さらに付き合っていけば結婚することもあると思います。それでも私は結婚出来ると思います。家族になるのは決して子供がいることが条件ではないし、夫婦の形であることには変わりありません。
 もし恋人が自分がロボットであるという秘密を打ち明けたとしても公にせず、二人だけの秘密にした方が良いと思います。
+
 以上から私は、恋人が何であろうと愛し続けることが出来ると思います。
 
 \newpage
@@ -50,17 +51,17 @@
 　この事件における被害者は明確であるが、加害者は誰だろうか。ロボットカーを作ったメーカーか、隣のレーンから来たロボットカーの所有者か、はたまた自分自身か。あなたはロボットメーカーやロボットの所有者の責任についてどのように考えますか。\\
  
 自分が使っていたロボットカーの｢目の前の信号が赤に変わることを予見｣する機能は、安全に運転するために必要な技術であるので、この機能に関してメーカーの責任は少ないと思います。速度を落とすということは危険回避もでき、もし衝突したい際の衝撃を少しでも軽減できるからです。
-また目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。　%今回のケースも隣のレーンから来るロボットカーを避けるために自身のロボットカーがハンドルを切っています。
+また目の前の物体を避ける技術も自動運転の車には必要な機能だと思います。　
 しかし運転している以上、弱者の立場にある歩行者は必ず避けなければいけません。
-今回のケースは隣のレーンから来るロボットカーを認識しましたが、人を認識して避けることが出来なかったということが浮かび上がってきます。メーカーはまず歩行者を第一に避けるために設計しなけいればいけないです。
+今回のケースは隣のレーンから来るロボットカーを認識しましたが、人を認識して避けることが出来なかったということが浮かび上がってきます。これはメーカーが想定しなければならないことだと思います。
+メーカーはまず歩行者を第一に避けるために設計しなけいればいけないです。
 また隣のレーンから来るためにハンドルを切る、というのは誤作動に近いと思います。文章中からはハンドルを切る必要がないと思われますが、このような機能をつけている理由もメーカーの説明が必要だと思います。
-
-これはメーカーが想定しなければならないことだと思います。
 
 また隣のレーンから来たロボットカーについて考えると、信号機近くで速度を落としている自分の車に斜め横から追い越す形で入ろうとしているように見受けられます。
 どのような理由で自身のロボットカーと同じように減速せずに信号機の交差点に向かってきたのか原因の解明が必要ですが、これは交差点付近で進路変更をしようとしたようにも見受けられます。このために少なからず隣のレーンから来たロボットカーのメーカーにもロボットカーの原因解明の責任があると思います。
 
 \newpage
+
  (3)現在、インターネットや自動化技術の発展によって人が行う仕事は確実に減っている。例えば、20世紀初頭の工場は単純作業者で溢れていたが、その多くは産業用ロボットに置き換わった。Amazonや楽天といったインターネット商店の出現によって、小売店の売上は減少しており、従来は小売店で人が行っていた仕事がインターネット上のプログラムに置き換わりつつある。
 　ロボットやプログラムの所有者は自動化によって多くの富を得た。一方で、単純作業者は職を失い、新しい職につくことが難しくなった。自動化による貧富の格差は今後さらに拡大する見込みである。
 　更に自動化が進む未来において人や社会はどうあるべきかについて、①政治や社会としての対応の観点から②個人としての生き方の観点から、自分の考えを述べよ。\\
@@ -73,9 +74,14 @@
 将来人間が行っていたことを全て自動化するというのは考えにくいですが、生産ラインや運搬の仕分けなどの単純作業が自動化する流れは止めることができないと思います。
 また最後の作業工程として人の目で確認しなければならないこともあるので、必ずしも人の仕事は無くならないと思います。
 
-②個人としての生き方の観点からは、
-職がロボットによって取られたという悲しみがあると思います。
+自動化するにあたって便利になる分、人の職を取っていることになりうるので税金などのお金を別途徴収して、自動化させずらくする取り組みも必要だと思います。
 
+既にスーパーやレンタル販売店ではセルフレジの導入がされており、人件費の削減や長時間労働の対策がなされています。
+
+②
+$ \textcircled{\scriptsize2} $
+個人としての生き方の観点からは、人でなければいけないという価値観を生み出さなければならないと思います。
+コミュニケーションがとれることは大事なことで、緊急事態になった場合、
 自動化する部分とそうでない部分の線引きが必要になってきます。
 何でもかんでも自動化してしまうと、バグが出た時に止めることが出来ません。
 ロボット側が止まった時に代わりに人が行わなければいけない時もあると思います。
